--- a/src/app/numbers/numbers.component.html
+++ b/src/app/numbers/numbers.component.html
@@ -1,11 +1,9 @@
-<form [formGroup]="myForm" > <!--(ngSubmit)="onSubmit(myForm.value)"-->
-<div>
-  <label for="no_id">Give a number:</label><br><br>
-  <input type="text" id="no_id" [formControl]="nr">
-  <br/><br/>
-</div>
-
-<!--<button type="submit"> Submit </button>-->
+<form [formGroup]="myForm">
+  <div>
+    <label for="no_id">Give a number:</label><br><br>
+    <input type="text" id="no_id" [formControl]="nr">
+    <br/><br/>
+  </div>
 </form>
 
 <div role="alert" *ngIf="message">
