--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <li><a [routerLink]="['home']">Home</a></li>
       <li><a [routerLink]="['cnp']">Cnp Validation</a></li>
       <li><a [routerLink]="['numbers']">Numbers to Words</a></li>
+      <li><a [routerLink]="['list']">CNP list</a></li>
     </ul>
   </nav>
   <router-outlet></router-outlet>
