--- a/src/app/cnp/cnp.component.html
+++ b/src/app/cnp/cnp.component.html
@@ -1,27 +1,49 @@
- <form [formGroup]="myForm">
-     <label for="series_id">Enter the IC series: </label>
-     <input type="text" id="series_id" [formControl]="seriesInput"><div role="alert" *ngIf="message1">{{message1}}</div><br>
+<form [formGroup]="myForm">
 
-      <label for="number_id">Enter the IC number: </label>
-     <input type="text" id="number_id" [formControl]="numberInput"><div role="alert" *ngIf="message">{{message}}</div><br>
 
-     <label for="cnp_id">Give a Romanian CNP: </label>
-<input type="text" id="cnp_id" [formControl]="cnpInput"><div role="alert" *ngIf="message5">{{message5}}</div><br/>
+    <label for="series_id">Enter the IC series: </label>
+    <input type="text" id="series_id" [formControl]="series">
+    <div *ngIf="series.hasError('invalidInput')">Trebuie sa contina doar litere!</div>
+    <div *ngIf="series.hasError('validLength')">Trebuie sa contina doar 2 caractere!</div><br>
 
-     <label for="lastname_id">Enter your last name: </label>
-     <input type="text" id="lastname_id" [formControl]="lastInput"><div role="alert" *ngIf="message2">{{message2}}</div><br>
+    <label for="number_id">Enter the IC number: </label>
+    <input type="text" id="number_id" [formControl]="number">
+    <div *ngIf="number.hasError('validNumber')">Trebuie sa contina doar cifre!</div>
+    <div *ngIf="number.hasError('validLength6')">Trebuie sa contina doar 6 cifre!</div><br>
 
-     <label for="firstname_id">Enter your first name: </label>
-     <input type="text" id="firstname_id" [formControl]="firstInput"><div role="alert" *ngIf="message3">{{message3}}</div><br>
+    <label for="cnp_id">Give a Romanian CNP: </label>
+    <input type="text" id="cnp_id" [formControl]="cnp">
+    <div *ngIf="cnp.hasError('codValid')">CNP invalid!</div><br/>
 
-     <label for="nationality_id">Enter your nationality: </label>
-     <input type="text" id="nationality_id" [formControl]="nationalityInput"><div role="alert" *ngIf="message4">{{message4}}</div><br>
+    <label for="lastname_id">Enter your last name: </label>
+    <input type="text" id="lastname_id" [formControl]="lastName">
+    <div *ngIf="lastName.hasError('invalidInput')">Trebuie sa contina doar litere!</div><br>
 
-<label for="adress_id">Enter your adress: </label>
-     <input type="text" id="adress_id" [formControl]="adressInput"><br>
+    <label for="firstname_id">Enter your first name: </label>
+    <input type="text" id="firstname_id" [formControl]="firstName">
+    <div *ngIf="firstName.hasError('invalidInput')">Trebuie sa contina doar litere!</div><br>
 
-<label for="validity_id">Enter your IC valability: </label>
-     <input type="date" id="validity_id" [formControl]="validityInput">To
-       <input type="date"  [formControl]="validityInput2"><br>
- </form>
- <br>
+
+    <label for="nationality_id">Enter your nationality: </label>
+    <input type="text" id="nationality_id" [formControl]="nationality">
+    <div *ngIf="nationality.hasError('invalidInput')">Trebuie sa contina doar litere!</div><br>
+
+    <label for="birth_id">Enter the place of birth: </label>
+    <input type="text" id="birth_id" [formControl]="birth">
+    <div *ngIf="nationality.hasError('invalidInput')">Trebuie sa contina doar litere!</div><br>
+
+    <label for="adress_id">Enter your adress: </label>
+    <input type="text" id="adress_id" size="50" [formControl]="adress"><br>
+
+    <label for="issued_id">Issued by: </label>
+    <input type="text" id="issued_id" [formControl]="issued">
+    <div *ngIf="issued.hasError('invalidInput')">Trebuie sa contina doar litere!</div><br>
+
+    <label for="validity_id">Enter your IC valability: </label>
+    <input type="date" id="validity_id" [formControl]="valid1">To
+    <input type="date" [formControl]="valid2"><br>
+
+    <button type="button" (click)="onClick()">Adaugati in lista</button>
+    <button type="reset">Reset</button>
+
+</form>
