--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -12,4 +12,5 @@
     </td>
   </tr>
 </table>
+<a [routerLink]="link('adauga')">Adauga o noua inregistrare</a>
 <a routerLink="../identitycard">Inapoi</a>
