upgrade angular versions

--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,46 +1,48 @@
+<h1>submitted: {{submitted}}</h1>
+<h2>{{lastName.hasError('invalidInput')}}</h2>
 <form [formGroup]="myForm" *ngIf="myForm">
     <p>
         <label for="series_id">Serie card identitate: </label>
         <input type="text" id="series_id" [formControl]="series">
-        <span *ngIf="display && number.hasError('validInput')">Trebuie sa contina doar cifre!</span>
-        <span *ngIf="display && number.hasError('validLength')">Trebuie sa contina doar 2 caractere!</span>
+        <span *ngIf="submitted && series.hasError('validInput')">Trebuie sa contina doar cifre!</span>
+        <span *ngIf="submitted && series.hasError('validLength')">Trebuie sa contina doar 2 caractere!</span>
     </p>
 
     <p>
         <label for="number_id">Numar: </label>
         <input type="text" id="number_id" [formControl]="number">
-        <span *ngIf="display && number.hasError('validNumber')">Trebuie sa contina doar cifre!</span>
-        <span *ngIf="display && number.hasError('validLength6')">Trebuie sa contina doar 6 cifre!</span>
+        <span *ngIf="submitted && number.hasError('validNumber')">Trebuie sa contina doar cifre!</span>
+        <span *ngIf="submitted && number.hasError('validLength6')">Trebuie sa contina doar 6 cifre!</span>
     </p>
 
     <p>
         <label for="cnp_id">CNP: </label>
         <input type="text" id="cnp_id" [formControl]="cnp">
-        <span *ngIf="display && cnp.hasError('codValid')">CNP invalid!</span>
+        <span *ngIf="submitted && cnp.hasError('codValid')">CNP invalid!</span>
     </p>
 
     <p>
         <label for="lastname_id">Nume: </label>
         <input type="text" id="lastname_id" [formControl]="lastName">
-        <span *ngIf="display && lastName.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
+        <span *ngIf="submitted && lastName.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
     </p>
 
     <p>
         <label for="firstname_id">Prenume: </label>
         <input type="text" id="firstname_id" [formControl]="firstName">
-        <span *ngIf="display && firstName.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
+        <span *ngIf="submitted && firstName.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
     </p>
 
     <p>
         <label for="nationality_id">Nationalitate: </label>
         <input type="text" id="nationality_id" [formControl]="nationality">
-        <span *ngIf="display && nationality.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
+        <span *ngIf="submitted && nationality.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
     </p>
 
     <p>
         <label for="birth_id">Locul nasterii: </label>
         <input type="text" id="birth_id" [formControl]="birth">
-        <span *ngIf="display && nationality.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
+        <span *ngIf="submitted && nationality.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
     </p>
 
     <p>
@@ -55,22 +57,22 @@
     <p>
         <label>Localitate/ Oras: </label>
         <input type="text" [formControl]="city">
-        <span *ngIf="display && firstName.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
+        <span *ngIf="submitted && firstName.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
     </p>
 
     <p>
         <label>Str: </label>
         <input type="text" [formControl]="street">
-        <span *ngIf="display">
-            <span *ngIf="display && firstName.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
+        <span *ngIf="submitted">
+            <span *ngIf="submitted && firstName.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
         </span>
     </p>
 
     <p>
         <label>Nr: </label>
         <input type="text" [formControl]="streetNr">
-        <span *ngIf="display">
-            <span *ngIf="display && number.hasError('validNumber')">Trebuie sa contina doar cifre!</span>
+        <span *ngIf="submitted">
+            <span *ngIf="submitted && number.hasError('validNumber')">Trebuie sa contina doar cifre!</span>
         </span>
     </p>
 
@@ -87,29 +89,28 @@
     <p>
         <label>Et: </label>
         <input type="text" [formControl]="floor">
-        <span *ngIf=" display && number.hasError('validNumber')">Trebuie sa contina doar cifre!</span>
+        <span *ngIf="submitted && number.hasError('validNumber')">Trebuie sa contina doar cifre!</span>
     </p>
 
     <p>
         <label>Ap: </label>
         <input type="text" [formControl]="apartament">
-        <span *ngIf="display && number.hasError('validNumber')">Trebuie sa contina doar cifre!</span>
+        <span *ngIf="submitted && number.hasError('validNumber')">Trebuie sa contina doar cifre!</span>
     </p>
 
     <p>
         <label for="issued_id">Eliberat de: </label>
         <input type="text" id="issued_id" [formControl]="issued">
-        <span *ngIf="display && issued.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
+        <span *ngIf="submitted && issued.hasError('invalidInput')">Trebuie sa contina doar litere!</span>
     </p>
 
     <p>
         <label for="validity_id">Valabilitate: </label>
-        <input type="date" id="validity_id" [formControl]="valid1">Pana la
-        <input type="date" [formControl]="valid2">
+        <input type="date" id="validity_id" [formControl]="valid1">
+        <label for="valid2_id"> Pana la: </label>
+        <input type="date" id= "valid2_id" [formControl]="valid2">
     </p>
 
-    <a type="button" (click)="onClick()">Adaugati in lista</a>
-
-
-
 </form>
+
+<button type="button" (click)="addOrUpdateCnp()">Adaugati in lista</button>
