--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <nav>
    <ul>
       <li><a [routerLink]="['home']">Home</a></li>
-      <li><a [routerLink]="['identitycard']">Identity Card</a></li>
+      <li><a [routerLink]="['list']">Identity Card list</a></li>
       <li><a [routerLink]="['numbers']">Numbers to Words</a></li>
     </ul>
   </nav>
